--- a/app_flask/templates/client_completed_jobs.html
+++ b/app_flask/templates/client_completed_jobs.html
@@ -1,11 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container row">
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-open-jobs  mr-2" href="/client/" >Open Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-active-jobs mr-2" href="/client/activejobs">Active Jobs</a>
-    <a type="button" class="btn btn-primary btn-lg btn-jobs col  btn-completed-jobs mr-2" href="/client/completedjobs">Completed Jobs</a>
-    <button type="button" id="openModalBtn" data-toggle="modal" data-target="#createJobModal" class="btn btn-secondary btn-lg btn-request-service btn-jobs col  mr-2">Request a Service</button>
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-my-orders" href="/client/myorders">My Orders</a>
+<div class="container">
+<div class="row mt-1">
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-open-jobs  mr-2" href="/client/" >Open Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-active-jobs mr-2" href="/client/activejobs">Active Jobs</a>
+    <a type="button" class="btn btn-primary btn-lg btn-jobs col-md  btn-completed-jobs mr-2" href="/client/completedjobs">Completed Jobs</a>
+    <button type="button" id="openModalBtn" data-toggle="modal" data-target="#createJobModal" class="btn btn-secondary btn-lg btn-request-service btn-jobs col-md  mr-2">Request a Service</button>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-my-orders" href="/client/myorders">My Orders</a>
 </div>
 
 
@@ -36,17 +37,17 @@
 </div>
 <!-- End Create Job Modal -->
 
-
-
-<h1 id="jobs-heading">Completed Jobs</h1>
+<!-- tiles section -->
 <div class="accordion" id="accordionExample">
+    <h1 id="jobs-heading">Completed Jobs</h1>
     {% for job in jobs.values() %}
 
-    <div class="card">
+    <div class="card my-2 shadow-sm">
         <div class="card-header" id="headingOne">
             <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Job #{{loop.index}} - {{job[0].job_title}}
+                <button class="btn btn-block text-left accordionBtn d-flex align-items-center justify-content-between" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <p>Job #{{loop.index}} - {{job[0].job_title}}</p>
+                    <i class="fa-solid fa-chevron-down fa-shake fa-lg"></i>
                 </button>
             </h2>
         </div>
@@ -59,18 +60,18 @@
 
                 {% if bid.mechanic_name %}
                 <strong>Bid Information {{loop.index}}</strong><br>
-                Mechanic Name: {{ bid.mechanic_name }} <br>
+                <p>Mechanic Name: {{ bid.mechanic_name }}</p>
                 {% else %}
-                <p>No Bid Yet</p><br>
+                <p>No Bid Yet</p>
                 {% endif %}
                 {% if bid.mechanic_phone %}
-                Mechanic Phone: {{ bid.mechanic_phone }} <br>
+                <p>Mechanic Phone: {{ bid.mechanic_phone }}</p>
                 {% endif %}
                 {% if bid.mechanic_rating %}
-                Mechanic Ratings: {{bid.mechanic_rating}} <br>
+                <p>Mechanic Ratings: {{bid.mechanic_rating}}</p>
                 {% endif %}
                 {% if bid.bid_amount %}
-                Bid Amount: {{ bid.bid_amount }} <br><br>
+                <p>Bid Amount: {{ bid.bid_amount }}</p>
                 <button class="btn btn-success "  type="button" data-bid-id="{{ bid.bid_id }}" id="accept_bid">Accept Bid</button>
                 {% endif %}
             </div>
@@ -79,6 +80,8 @@
 
     </div>
     {% endfor %}
+</div>
+<!--  -->
 </div>
 
 {% endblock content%}
