--- a/app_flask/templates/client_orders.html
+++ b/app_flask/templates/client_orders.html
@@ -2,43 +2,43 @@
 <!-- {% block title %}My Child Page{% endblock %} -->
 {% block content %}
 <div class="container">
-  <div class="container row">
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-open-jobs  mr-2" href="/client/" >Open Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-active-jobs mr-2" href="/client/activejobs">Active Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg btn-jobs col  btn-completed-jobs mr-2" href="/client/completedjobs">Completed Jobs</a>
-    <button type="button" id="openModalBtn" data-toggle="modal" data-target="#createJobModal" class="btn btn-secondary btn-lg btn-request-service btn-jobs col  mr-2">Request a Service</button>
-    <a type="button" class="btn btn-primary btn-lg btn-jobs col btn-my-orders" href="/client/myorders">My Orders</a>
-  </div>
+<div class="row mt-1">
+  <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-open-jobs  mr-2" href="/client/" >Open Jobs</a>
+  <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md btn-active-jobs mr-2" href="/client/activejobs">Active Jobs</a>
+  <a type="button" class="btn btn-secondary btn-lg btn-jobs col-md  btn-completed-jobs mr-2" href="/client/completedjobs">Completed Jobs</a>
+  <button type="button" id="openModalBtn" data-toggle="modal" data-target="#createJobModal" class="btn btn-secondary btn-lg btn-request-service btn-jobs col-md  mr-2">Request a Service</button>
+  <a type="button" class="btn btn-primary btn-lg btn-jobs col-md btn-my-orders" href="/client/myorders">My Orders</a>
+</div>
 
 
-  <!-- Start of Accordion orders -->
-  <div class="accordion" id="accordionExample">
-    <p>Ordered Parts</p>
-    {% for part in orders %}
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading{{ loop.index }}">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
-          Part #{{ loop.index }} - {{ part.part_name }}
-        </button>
-      </h2>
-      <div id="collapse{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>Part Information</strong><br>
-          <p>Ordered Part Name: {{ part.order_part_name }}</p> <br>
-          <p>Ordered Part Description: {{ part.order_part_description }}</p> <br>
-          <p>Vendor Name: {{part.vendor_name}}</p> <br>
-          <p>Vendor Phone Number: {{part.vendor_phone_number}}</p> <br>
-          <p>Part Price: {{ part.part_price }}</p> <br><br>
-          <div>
-            <button type="button" class="editPartDetails btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal" data-id="{{ part.id }}">Edit</button>
-          </div>
+<!-- Start of Accordion orders -->
+<div class="accordion" id="accordionExample">
+  <h1 id="jobs-heading">Parts Ordered</h1>
+  {% for part in orders %}
+  <div class="accordion-item my-2 shadow-sm">
+    <h2 class="accordion-header" id="heading{{ loop.index }}">
+      <button class="accordion-button collapsed accordionBtn d-flex align-items-center justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
+        <p>Part #{{ loop.index }} - {{ part.part_name }}</p>
+        <i class="fa-solid fa-chevron-down fa-shake fa-lg"></i>
+      </button>
+    </h2>
+    <div id="collapse{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Part Information</strong><br>
+        <p>Ordered Part Name: {{ part.order_part_name }}</p>
+        <p>Ordered Part Description: {{ part.order_part_description }}</p>
+        <p>Vendor Name: {{part.vendor_name}}</p>
+        <p>Vendor Phone Number: {{part.vendor_phone_number}}</p>
+        <p>Part Price: {{ part.part_price }}</p>
+        <div>
+          <button type="button" class="editPartDetails btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal" data-id="{{ part.id }}">Edit</button>
         </div>
       </div>
     </div>
-    {% endfor %}
   </div>
-  <!-- End of Accordion orders -->
+  {% endfor %}
 </div>
+<!-- End of Accordion orders -->
 </div>
 
 {% endblock content %}
