--- a/app_flask/templates/vendor_catalogue.html
+++ b/app_flask/templates/vendor_catalogue.html
@@ -66,10 +66,16 @@
         </div>
     </div>
 
-
+    
     <div class="container">
-    <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2">
+    <!-- <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2">
         <h3>Parts Added</h3>
+    </div> -->
+    <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 d-flex justify-content-between">
+      <h3>Parts Added</h3>
+      <div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewPart">Add a new part</button>
+      </div>
     </div>
     </div>
     <div class="container">
@@ -85,9 +91,10 @@
           <div class="accordion-body">
             <strong>Part Information</strong><br>
             Part Name: {{ item.part_name }} <br>Part Description: {{ item.part_description }} <br>Part Price: {{ item.part_price }} <br><br>
-            <div>
+            <div class="d-flex justify-content-between">
                 <button type="button" class="editPartDetails btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal" data-id="{{ item.id }}">Edit</button>
-            </div>
+                <button type="button" class="deleteVendorPart btn btn-outline-danger" data-id="{{ item.id }}">Delete Part</button>
+          </div>
           </div>
         </div>
       </div>
@@ -107,11 +114,11 @@
                     <div class="form-group">
                         <label for="formpartname">Edit Part Name</label>
                         <input type="text" name="part_name" class="form-control" id="formpartname" placeholder="Update part name (leave blank for no change)">
-                    </div>
+                    </div><br>
                     <div class="form-group">
                         <label for="formprice">Edit Part Price</label>
                         <input type="number" name="part_price" class="form-control" id="formprice" placeholder="Update price (leave blank for no change)">
-                    </div>
+                    </div><br>
                     <div class="form-group">
                         <label for="formtextarea">Edit Part Description</label>
                         <textarea class="form-control" name="part_description" id="formtextarea" rows="3" placeholder="Update description (leave blank for no change)"></textarea>
@@ -133,11 +140,48 @@
         </div>
         </div>
     </div>
+    </div>
+    <!-- Modal -->
+    <div>
+    <div class="modal fade" id="addNewPart" tabindex="-1" aria-labelledby="addNewPartLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addNewPartLabel">Add New Part</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form method="POST" action="{{url_for('vendor_parts')}}">
+              <div class="form-group">
+                  <label for="formpartname">Add Part Name</label>
+                  <input type="text" name="part_name" class="form-control" id="formpartname1" placeholder="Add Part Name">
+              </div><br>
+              <div class="form-group">
+                  <label for="formprice">Add Part Price</label>
+                  <input type="number" name="part_price" class="form-control" id="formprice1" placeholder="Add Part Price">
+              </div><br>
+              <div class="form-group">
+                  <label for="formtextarea">Add Part Description</label>
+                  <textarea class="form-control" name="part_description" id="formtextarea1" rows="3" placeholder="Add Part Description (optional)"></textarea>
+                </div><br>
+              <div class="form-group">
+                  <label for="addfile">Add file</label><br>
+                  <input type="file" class="form-control-file" id="addfile">
+              </div>
+              <br><button type="submit" class="newpartbutton btn btn-primary">Add Part</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </form>
+        </div>
+      </div>
+    </div>
+
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="../static/scripts/modal_bid.js"></script>
+    <script src="../static/scripts/deletePart.js"></script>
   </body>
 </html>
