--- a/app_flask/templates/client_homepage.html
+++ b/app_flask/templates/client_homepage.html
@@ -18,11 +18,11 @@
           <form id="myForm">
             <div class="form-group">
               <label for="job_title">Job Title</label>
-              <input type="text" class="form-control" id="job_title" placeholder="Enter job title">
+              <input type="text" class="form-control" maxlength="20" id="job_title" placeholder="Enter job title">
             </div>
             <div class="form-group">
               <label for="job_desc">Job Description</label>
-              <input type="text" class="form-control" id="job_desc" placeholder="Enter job description">
+              <input type="text" class="form-control " maxlength="120" id="job_desc" placeholder="Enter job description">
             </div>
           </form>
         </div>
