--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -19,7 +19,7 @@
 <body>
   <!-- Navigation Bar -->
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-10">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <img src="../static/images/logo.png" alt="service mtaani logo" srcset="" height="40px">
       <a class="navbar-brand" href="#">ServiceMtaani</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
