--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -1,31 +1,32 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container row">
-    <a type="button" class="btn btn-primary btn-lg col btn-space mech-jobs mech-open-jobs" href="/mechanic/">Open Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-open-bids" href="/mechanic/openbids">Open Bids</a>
-    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-active-jobs" href="/mechanic/activejobs">Active Jobs</a>
-    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-completed-jobs" href="/mechanic/completedjobs">Completed Jobs</a>
-</div>
+<div class="container">
+  <div class="row mt-1">
+    <a type="button" class="btn btn-primary btn-lg col-md accordionBtn mr-2  mech-jobs mech-open-jobs" href="/mechanic/">Open Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn mr-2  mech-jobs mech-open-bids" href="/mechanic/openbids">Open Bids</a>
+    <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn mr-2  mech-jobs mech-active-jobs" href="/mechanic/activejobs">Active Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg col-md accordionBtn  mech-jobs mech-completed-jobs" href="/mechanic/completedjobs">Completed Jobs</a>
+  </div>
 
-<div class="container job-tile">
-    <!-- Example row of columns -->
-    <div class="row">
-        {% for job in all_jobs %}
-        <div class="col-md-4">
-            <h2>{{ job.job_title }}</h2>
-            <p>{{ job.job_description }}</p>
-            <div>
-                <button type="button" class="bidForJob btn btn-outline-success" data-id="{{ job.id }}" data-toggle="modal" data-target="#bidModal">Bid For Job</button>
-            </div>
-            <!-- <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p> -->
+  <!-- Example row of columns -->
+  <div class="row">
+    {% for job in all_jobs %}
+    <div class="col-md-4">
+      <div class="card job-tiles d-flex flex-column mt-1  shadow">
+        <h2>{{ job.job_title }}</h2>
+        <p class="px-3 text-justify">{{ job.job_description }}</p>
+        <div class="mt-auto text-right p-2 p-2">
+          <button type="button" class="bidForJob btn btn-outline-success" data-id="{{ job.id }}" data-toggle="modal" data-target="#bidModal">Bid For Job</button>
         </div>
-        {% endfor %}
+      </div>
     </div>
-    <hr>
-</div>
+    {% endfor %}
+  </div>
+  <hr>
 
-<!-- Place Bid Modal  -->
-<div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
+
+  <!-- Place Bid Modal  -->
+  <div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -35,19 +36,20 @@
           </button>
         </div>
         <div class="modal-body">
-        <form method="POST" id="form1">
-          <div class="form-group">
-            <label for="formprice">Enter Bid Amount</label>
-            <input type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
-            <input type="hidden" name="mechanic_id" value="{{ current_user.id }}">
-            <input type="hidden" id="job_id" name="job_id" class="form-control">
+          <form method="POST" id="form1">
+            <div class="form-group">
+              <label for="formprice">Enter Bid Amount</label>
+              <input type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
+              <input type="hidden" name="mechanic_id" value="{{ current_user.id }}">
+              <input type="hidden" id="job_id" name="job_id" class="form-control">
 
-        </div>
-        <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        </form>
+            </div>
+            <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
-{% endblock content %}
+  {% endblock content %}
+</div>
