--- a/app_flask/static/styles/button.css
+++ b/app_flask/static/styles/button.css
@@ -11,13 +11,13 @@
     letter-spacing: 1.5px;
     text-align: center;
     text-transform: uppercase;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 .job-tiles p {
     width: 100%;
     letter-spacing: 1px;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
 /* remove accordion border */
@@ -32,5 +32,5 @@
 .btn-delete {
 outline: none !important;
 box-shadow: none !important;
-background: none;
+/* background: none; */
 }
