--- a/app_flask/static/styles/style.css
+++ b/app_flask/static/styles/style.css
@@ -1,3 +1,23 @@
+body {
+    background-color:#cdcdcd;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Hide the vertical scroll bar */
+body::-webkit-scrollbar,
+body::-webkit-scrollbar-track,
+body::-webkit-scrollbar-thumb{
+    width: 0.5em;
+    background-color: transparent;
+    background-color: transparent;
+}
+
+body p {
+    letter-spacing: 1px;
+}
+body h1, h2, h3, h4, h5, h6 {
+    letter-spacing: 1.5px;
+}
 .align-center-div{
     display: flex;
     justify-content: center;
