--- a/app_flask/templates/landing_page.html
+++ b/app_flask/templates/landing_page.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg py-3 sticky-top bg-body-white">
+    <nav class="bg-white navbar navbar-expand-lg py-3 sticky-top bg-body-white">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
@@ -55,17 +55,17 @@
             <li class="nav-item">
               <a class="nav-link" href="#team">Team</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#blog">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
-          <button class="btn btn-primary ms-lg-3">Sign Up</button>
         </div>
       </div>
     </nav>
+    
     <!-- End Navigation Bar -->
     <!-- Hero Section -->
     <div class="hero vh-100 d-flex align-items-center" id="home">
@@ -74,29 +74,47 @@
           <div class="col-lg-7 mx-auto text-center">
             <h1 class="display-4 text-white">Welcome to Service Mtaani</h1>
             <p class="text-white my-3">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque
-              veritatis molestias quod totam? Nam possimus odio provident animi
-              aperiam! Consectetur.
+              ServiceMtaani was created to ensure that clients get the maximum value
+               for their money by ensuring access to highly-trained, efficient, and competent
+                mechanics. 
             </p>
-            <a href="#" class="btn btn-primary me-3">Get Started</a>
-            <a href="#" class="btn btn-outline-light">Testimonials</a>
+            <div class="row">
+              <div class="col-sm-4 btn-group">
+              <button type="button" class="btn btn-outline-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                Sign Up
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/sign_up/client">Client Sign Up</a></li>
+                <li><a class="dropdown-item" href="/sign_up/vendor">Vendor Sign Up</a></li>
+                <li><a class="dropdown-item" href="/sign_up/mechanic">Mechanic Sign Up</a></li>              </ul>
+              </div>
+              <div class="col-sm-4 btn-group">
+              <button type="button" class="btn btn-outline-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                Login
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/login/client">Client Login</a></li>
+                <li><a class="dropdown-item" href="/login/vendor">Vendor Login</a></li>
+                <li><a class="dropdown-item" href="/login/mechanic">Mechanic Login</a></li>              </ul>
+              </div>
+              <div class="col-sm-4 btn-group">
+            <a href="#" class="btn btn-outline-light w-100">Testimonials</a>
+            </div>
+          </div>
           </div>
         </div>
       </div>
     </div>
     <!-- End Hero Section -->
     <!-- services section -->
-    <section id="services">
+    <section id="services" class="pt-5">
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-primary">Services</h6>
             <h1>Our Services</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              deserunt vero voluptates pariatur blanditiis, molestias
-              doloremque, mollitia numquam natus facilis molestiae modi eveniet
-              similique culpa fugiat rem magni. Tempora, ipsum?
+              Through our platform, you can access services such as:
             </p>
           </div>
           <div class="row g-4">
@@ -105,11 +123,9 @@
                 <div class="iconbox">
                     <i class='bx bxs-car-mechanic'></i>
                 </div>
-                <h5 class="mt-4 mb-2">Major Service</h5>
+                <h5 class="mt-4 mb-2">Car Repair Services</h5>
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                  nesciunt, alias recusandae veritatis maiores officiis odio
-                  beatae nostrum at natus?
+                  Get access to a wide range of repair services including body works and brake work.
                 </p>
               </div>
             </div>
@@ -118,11 +134,9 @@
                 <div class="iconbox">
                     <i class='bx bxs-car-mechanic'></i>
                 </div>
-                <h5 class="mt-4 mb-2">Minor Service</h5>
+                <h5 class="mt-4 mb-2">Major and Minor Service</h5>
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                  nesciunt, alias recusandae veritatis maiores officiis odio
-                  beatae nostrum at natus?
+                  Major and minor services can be handled by experts on our platform from the comfort of your home.
                 </p>
               </div>
             </div>
@@ -133,9 +147,20 @@
                 </div>
                 <h5 class="mt-4 mb-2">Car Wash Service</h5>
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                  nesciunt, alias recusandae veritatis maiores officiis odio
-                  beatae nostrum at natus?
+                  Connecting car owners with top car wash professionals. We are your trusted link to expert car wash services. 
+                  Pamper Your Vehicle, Leave the Washing to Us.
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="service card-effect">
+                <div class="iconbox">
+                  <i class='bx bxs-car-garage' ></i>
+                </div>
+                <h5 class="mt-4 mb-2">Towing Service</h5>
+                <p>
+                  Get towing services whenever you are stuck. Access professional towers
+                   at the touch of a button
                 </p>
               </div>
             </div>
@@ -144,25 +169,9 @@
                   <div class="iconbox">
                     <i class='bx bxs-car' ></i>
                   </div>
-                  <h5 class="mt-4 mb-2">Tyre Change Service</h5>
+                  <h5 class="mt-4 mb-2">Connect with Car Owners</h5>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                    nesciunt, alias recusandae veritatis maiores officiis odio
-                    beatae nostrum at natus?
-                  </p>
-                </div>
-              </div>
-              <div class="col-lg-4 col-sm-6">
-                <div class="service card-effect">
-                  <div class="iconbox">
-                    <i class='bx bxs-car-garage' ></i>
-                  </div>
-                  <h5 class="mt-4 mb-2">Tow Service</h5>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                    nesciunt, alias recusandae veritatis maiores officiis odio
-                    beatae nostrum at natus?
-                  </p>
+                    Unlock New Opportunities for Mechanics.                  </p>
                 </div>
               </div>
               <div class="col-lg-4 col-sm-6">
@@ -172,9 +181,8 @@
                   </div>
                   <h5 class="mt-4 mb-2">Part Sales Service</h5>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                    nesciunt, alias recusandae veritatis maiores officiis odio
-                    beatae nostrum at natus?
+                    As a vendor, you can easily sell parts to clients through our order management 
+                    system.
                   </p>
                 </div>
               </div>
@@ -188,26 +196,23 @@
         <div class="col-lg-6 col-img">
 
         </div>
-        <div class="col-lg-6 py-5">
+        <div class="col-lg-6 py-3">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 offset-md-1">
-                        <h6 class="text-primary py-5">WHY CHOOSE US?</h6>
-                        <h1>Hassle Free Car Ownership</h1>
+                        <h6 class="text-primary py-3">WHY CHOOSE US?</h6>
+                        <h1>Unlocking Automotive Success</h1>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-                          deserunt vero voluptates pariatur blanditiis, molestias
-                          doloremque, mollitia numquam natus facilis molestiae modi eveniet
-                          similique culpa fugiat rem magni. Tempora, ipsum?
+                          Discover Why Car Owners, Mechanics, and Car Parts Sellers Choose Us!
                         </p>
                         <div class="feature d-flex mt-5">
                             <div class="iconbox me-3">
                                 <i class='bx bx-check-square' ></i>
                             </div>
                             <div class="container">
-                            <h5>Feature</h5>                            <p>
-                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                              nesciunt, alias recusandae veritatis maiores.
+                            <h5>For Car Owners</h5>                            
+                            <p>
+                              Unmatched Convenience and Quality Repairs at Your Fingertips.
                             </p>
                             </div>
                         </div>
@@ -216,9 +221,9 @@
                                 <i class='bx bx-check-square' ></i>
                             </div>
                             <div class="container">
-                            <h5>Feature</h5>                            <p>
-                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                              nesciunt, alias recusandae veritatis maiores.
+                            <h5>For Mechanics</h5>                            
+                            <p>
+                              Amplify Your Reach and Maximize Your Earnings with our Robust Platform.
                             </p>
                             </div>
                         </div>
@@ -227,9 +232,9 @@
                                 <i class='bx bx-check-square' ></i>
                             </div>
                             <div class="container">
-                            <h5>Feature</h5>                            <p>
-                              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos
-                              nesciunt, alias recusandae veritatis maiores.
+                            <h5>For Vendors</h5>                            
+                            <p>
+                              Expand Your Customer Base and Boost Your Sales with our Trusted Marketplace.
                             </p>
                             </div>
                         </div>
@@ -240,17 +245,14 @@
     </section>
     <!-- end features section -->
     <!-- portfolio section -->
-    <section id="testimonials">
+    <section id="testimonials" class="py-5">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-primary">Testimonials</h6>
             <h1>Testimonials</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              deserunt vero voluptates pariatur blanditiis, molestias
-              doloremque, mollitia numquam natus facilis molestiae modi eveniet
-              similique culpa fugiat rem magni. Tempora, ipsum?
+              Hear from satisfied clients:
             </p>
           </div>
           <div class="row">
@@ -259,7 +261,7 @@
                 <img class="test_img" src="../static/images/testimonial_1.jpg" alt="testimonial_photo">
                 <div class="overlay">
                   <div class="container">
-                    <h4 class="text-white">Laura Woods</h4>
+                    <h4 class="text-white">Caro Anyango</h4>
                     <h6 class="text-white">I need not worry about tyre change</h6>
                   </div>
                 </div>
@@ -270,8 +272,8 @@
                 <img class="test_img" src="../static/images/testimonial_5.jpg" alt="testimonial_photo">
                 <div class="overlay">
                   <div class="container">
-                    <h4 class="text-white">Gina Roberts</h4>
-                    <h6 class="text-white">Care care one click away</h6>
+                    <h4 class="text-white">Joan Kinuthia</h4>
+                    <h6 class="text-white">Car care one click away</h6>
                   </div>
                 </div>
               </div>
@@ -281,7 +283,7 @@
                 <img class="test_img" src="../static/images/testimonial_3.jpg" alt="testimonial_photo">
                 <div class="overlay">
                   <div class="container">
-                    <h4 class="text-white">Chris Adams</h4>
+                    <h4 class="text-white">Chris Wambua</h4>
                     <h6 class="text-white">Got stuck, towed on the click of a button</h6>
                   </div>
                 </div>
@@ -292,24 +294,21 @@
     </section>
     <!-- end portfolio section -->
     <!-- team section -->
-    <section id="team">
+    <section id="team" class="py-5">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-primary">Team</h6>
             <h1>Meet our Crew</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              deserunt vero voluptates pariatur blanditiis, molestias
-              doloremque, mollitia numquam natus facilis molestiae modi eveniet
-              similique culpa fugiat rem magni. Tempora, ipsum?
+              ServiceMtaani is brought to you by:
             </p>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-lg-4 col-sm-6">
             <div class="team-member card-effect">
-              <img class="team_img" src="../static/images/team_01.png" alt="">
+              <img class="team_img" src="../static/images/jake.jpg" alt="">
               <h5 class="mb-0 mt-4">Jake Mdigo</h5>
               <h6>Software Engineer</h6>
               <div class="social-icons">
@@ -348,7 +347,7 @@
     </section>
     <!-- end team section -->
     <!-- blog section -->
-    <section id="blog" class="bg-light">
+    <section id="blog" class="bg-light py-5">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-8 mx-auto text-center">
@@ -389,41 +388,52 @@
     </section>
     <!-- end blog section -->
     <!-- contact section -->
-    <section id="contact" class="bg-light">
+    <section id="contact" class="bg-light py-5">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-primary">Contact</h6>
             <h1>Get in Touch</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
-              deserunt vero voluptates pariatur blanditiis, molestias
-              doloremque, mollitia numquam natus facilis molestiae modi eveniet
-              similique culpa fugiat rem magni. Tempora, ipsum?
+              Fill out this form and a member of our team will get back to you.
             </p>
           </div>
         </div>
-          <form action="" class="row g-3 justify-content-center">
+          <form method="POST" class="row g-3 justify-content-center">
             <div class="col-md-5">
-              <input type="text" class="form-control" placeholder="Full Name">
+              <input type="text" class="form-control" name="full_name" placeholder="Full Name">
             </div>
             <div class="col-md-5">
-              <input type="text" class="form-control" placeholder="Enter Email">
+              <input type="text" class="form-control" name="email" placeholder="Enter Email">
             </div>
             <div class="col-md-10">
-              <input type="text" class="form-control" placeholder="Enter Subject">
+              <input type="text" class="form-control" name="subject" placeholder="Enter Subject">
             </div>
             <div class="col-md-10">
-              <textarea name="" id="" cols="30" rows="5" class="form-control" placeholder="Enter Message"></textarea>
+              <textarea id="" cols="30" rows="5" name="message" class="form-control" placeholder="Enter Message"></textarea>
             </div>
             <div class="col-md-10 d-grid">
-              <button class="btn btn-primary">Contact</button>
+              <button type="submit" class="btn btn-primary">Contact</button>
             </div>
+            
           </form>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+           <ul class="flash-messages bg-success text-white">
+            {% for message in messages %}
+                <li class="flash-message bg-success text-white">{{ message }}</li>
+                <button type="button" class="close" data-dismiss="alert">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            {% endfor %}
+            </ul>
+            {% endif %}
+            {% endwith %}
         </div>
           
     </section>
     <!-- end contact section -->
+    
 
     <footer>
       <div class="footer-top">
@@ -436,9 +446,9 @@
               <h5 class="text-white">Brand</h5>
               <ul class="list-unstyled">
                 <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Testimonials</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
               </ul>
             </div>
             <div class="col-md-2">
@@ -447,7 +457,6 @@
                 <li><a href="#">FAQ's</a></li>
                 <li><a href="#">Privacy & Policy</a></li>
                 <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Testimonials</a></li>
               </ul>
             </div>
             <div class="col-md-4">
@@ -479,10 +488,12 @@
       </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script src="../static/scripts/hide_blog.js"></script>
   </body>
 </html>
