--- a/app_flask/static/styles/style.css
+++ b/app_flask/static/styles/style.css
@@ -1,6 +1,6 @@
 body {
     background-color:#cdcdcd;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
 /* Hide the vertical scroll bar */
@@ -13,9 +13,14 @@ body::-webkit-scrollbar-thumb{
 }
 
 body p {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 24px;
     letter-spacing: 1px;
 }
 body h1, h2, h3, h4, h5, h6 {
+    font-family: "raleway", sans-serif;
     letter-spacing: 1.5px;
 }
 .align-center-div{
