--- a/app_flask/templates/users.html
+++ b/app_flask/templates/users.html
@@ -12,8 +12,8 @@
 </head>
 <body class="container-fluid align-center-div">
     <div  class="text-center ">
-        <img src="/static/images/logo.png"  class="img-fluid" width="300" height="300" alt="">
-        <h1>Service <span><img src="/static/images/cross.png" width="50px" height="50px" alt="" srcset=""></span> Mtaani</h1>
+        <img src="../static/images/logo.png"  class="img-fluid" width="300" height="300" alt="">
+        <h1>Service <span><img src="../static/images/cross.png" width="50px" height="50px" alt="" srcset=""></span> Mtaani</h1>
         <h6>I am a</h6>
         <div mt-10>
             <input class="button me-5" type="button" value="Car Owner">
