--- a/app_flask/templates/client_completed_jobs.html
+++ b/app_flask/templates/client_completed_jobs.html
@@ -72,7 +72,7 @@
                 {% endif %}
                 {% if bid.bid_amount %}
                 <p>Bid Amount: {{ bid.bid_amount }}</p>
-                <button class="btn btn-success "  type="button" data-bid-id="{{ bid.bid_id }}" id="accept_bid">Accept Bid</button>
+                <button class="btn btn-info "  type="button" data-bid-id="{{ bid.bid_id }}" id="contactSupport">Contact Support</button>
                 {% endif %}
             </div>
         </div>
