--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -162,5 +162,6 @@
     <script src="../static/scripts/create_job.js"></script>
     <script src="../static/scripts/modal_bid.js"></script>
     <script src="../static/scripts/mechanic_homepage.js"></script>
+    <script src="../static/scripts/review_job.js"></script>
   </body>
   </html>
