--- a/app_flask/templates/vendor_delivered.html
+++ b/app_flask/templates/vendor_delivered.html
@@ -11,8 +11,8 @@
     <title>Delivered Orders</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
-        <div class="container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark py-3">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="../static/images/logo.png" alt="" width="43" height="24" class="d-inline-block align-text-top">
             Service Mtaani
@@ -96,6 +96,27 @@
     {% endfor %}
     </div>
     </div>
+
+    <footer class="bg-dark text-light py-2 fixed-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h5><a href="#about-us" class="text-light text-decoration-none">About Us</a></h5>
+          </div>
+          <div class="col-sm-4">
+            <h5><a href="#contact-us" class="text-light text-decoration-none">Contact Us</a></h5>
+          </div>
+          <div class="col-sm-4">
+            <h5><a href="#team" class="text-light text-decoration-none">Team</a></h5>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col text-center">
+            <p class="m-0">© 2023 Service Mtaani.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
