--- a/app_flask/templates/vendor_orders.html
+++ b/app_flask/templates/vendor_orders.html
@@ -11,42 +11,42 @@
     <title>Open Orders</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="../static/images/logo.png" alt="" width="43" height="24" class="d-inline-block align-text-top">
-            Service Mtaani
-        </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-              {% if current_user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Log out</a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="/">Log In</a>
-              </li>
-              {% endif %}
-            </ul>
-            <!-- <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
-          </div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark py-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img src="../static/images/logo.png" alt="" width="43" height="24" class="d-inline-block align-text-top">
+          Service Mtaani
+      </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Log out</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="/">Log In</a>
+            </li>
+            {% endif %}
+          </ul>
+          <!-- <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form> -->
         </div>
+      </div>
     </nav>
     <div class="row row-cols-auto justify-content-around">
         <div class="col-md-4">
@@ -97,6 +97,27 @@
     {% endfor %}
     </div>
     </div>
+
+    <footer class="bg-dark text-light py-2 fixed-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <h5><a href="#about-us" class="text-light text-decoration-none">About Us</a></h5>
+          </div>
+          <div class="col-sm-4">
+            <h5><a href="#contact-us" class="text-light text-decoration-none">Contact Us</a></h5>
+          </div>
+          <div class="col-sm-4">
+            <h5><a href="#team" class="text-light text-decoration-none">Team</a></h5>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col text-center">
+            <p class="m-0">© 2023 Service Mtaani.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
