--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -51,6 +51,7 @@
 
   <div class="container">
     {% block content %}{% endblock %}
+    <hr class="mx-3">
     <div class="container featured-vendors">
       <!-- carousel -->
       <div class="vendor-carousel">
