--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -111,8 +111,9 @@
       </div>
     </div>
     <!-- end of carousel -->
-
-    <div class="container">
+    
+    <!-- footer section -->
+    <div class="container footer">
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
@@ -120,37 +121,34 @@
             <small class="d-block mb-3 text-muted">© 2023</small>
           </div>
           <div class="col-6 col-md">
-            <h5>Features</h5>
+            <h5 class="text-light">Brand</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Cool stuff</a></li>
-              <li><a class="text-muted" href="#">Random feature</a></li>
-              <li><a class="text-muted" href="#">Team feature</a></li>
-              <li><a class="text-muted" href="#">Stuff for developers</a></li>
-              <li><a class="text-muted" href="#">Another one</a></li>
-              <li><a class="text-muted" href="#">Last time</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
-            <h5>Resources</h5>
+            <h5 class="text-light">More</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Resource</a></li>
-              <li><a class="text-muted" href="#">Resource name</a></li>
-              <li><a class="text-muted" href="#">Another resource</a></li>
-              <li><a class="text-muted" href="#">Final resource</a></li>
+              <li><a href="#">FAQ's</a></li>
+              <li><a href="#">Privacy & Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
             </ul>
           </div>
           <div class="col-6 col-md">
-            <h5>About</h5>
+            <h5 class="text-light">Contact</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Team</a></li>
-              <li><a class="text-muted" href="#">Locations</a></li>
-              <li><a class="text-muted" href="#">Privacy</a></li>
-              <li><a class="text-muted" href="#">Terms</a></li>
+              <li>Address: Dar-es-Salaam Rd off Enterprise Road, Industrial Area</li>
+              <li>Email: info@servicemtaani.com</li>
+              <li>Phone: +254700100200</li>
             </ul>
           </div>
         </div>
       </footer>
     </div>
+    <!-- End footer section -->
   </div>
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
