--- a/app_flask/static/styles/button.css
+++ b/app_flask/static/styles/button.css
@@ -13,3 +13,12 @@ outline: none !important;
 box-shadow: none !important;
 /* background: none; */
 }
+
+.footer a {
+  color: #21252f;
+  text-decoration: none;
+}
+ 
+.footer a:hover {
+  color: #fff;
+}
