--- a/app_flask/templates/vendor_catalogue.html
+++ b/app_flask/templates/vendor_catalogue.html
@@ -125,8 +125,8 @@
                       </div>
                     <br>
                     <div class="form-group">
-                        <label for="addfile">Add file</label><br>
-                        <input type="file" class="form-control-file" id="addfile">
+                        <label for="img">Add file</label><br>
+                        <input type="file" class="form-control-file" id="img" name="img" accept="image/*">
                     </div>
                     <input type="hidden" id="part_id" name="part_id" class="form-control">
                     <br><button type="submit" class="submitbutton btn btn-primary">Submit Edit</button>
