--- a/app_flask/templates/client_completed_jobs.html
+++ b/app_flask/templates/client_completed_jobs.html
@@ -41,11 +41,12 @@
 <div class="accordion" id="accordionExample">
     <h1 id="jobs-heading">Completed Jobs</h1>
     {% for job in jobs.values() %}
+    {% set card_index = loop.index %}
 
     <div class="card my-2 shadow-sm">
-        <div class="card-header" id="headingOne">
+        <div class="card-header" id="heading{{card_index}}">
             <h2 class="mb-0">
-                <button class="btn btn-block text-left accordionBtn d-flex align-items-center justify-content-between" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="btn btn-block text-left accordionBtn d-flex align-items-center justify-content-between" type="button" data-toggle="collapse" data-target="#collapse{{card_index}}" aria-expanded="true" aria-controls="collapse{{card_index}}">
                     <p>Job #{{loop.index}} - {{job[0].job_title}}</p>
                     <i class="fa-solid fa-chevron-down fa-shake fa-lg"></i>
                 </button>
@@ -55,7 +56,7 @@
 
         {% for bid in job %}
 
-        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <div id="collapse{{card_index}}" class="collapse" aria-labelledby="heading{{card_index}}" data-parent="#accordionExample">
             <div class="card-body">
 
                 {% if bid.mechanic_name %}
