--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -17,6 +17,17 @@
   <link rel="stylesheet" href="../static/styles/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet"/>
   <style>
+    .image-container {
+      width: 160px; /* Set your desired width */
+      height: 100px; /* Set your desired height */
+    }
+
+    .part_image_file {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
      .stretch-card>.card {
      width: 100%;
      min-width: 100%
@@ -116,7 +127,9 @@
                   <div class="owl-carousel">
                     {% for part in parts %}
                     <div class="item">
-                      <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image"/>
+                      <div class="image-container">
+                      <img src="../static/images/{{part.part_image}}" alt="image" width="160" height="100" class="part_image_file"/>
+                      </div>
                       <p>{{ part.part_name }}<br>{{part.part_price}}</p>
                       <a class="btn btn-primary" href="#">Order this part</a>                      
                     </div>
