--- a/app_flask/templates/test_route.html
+++ b/app_flask/templates/test_route.html
@@ -12,63 +12,30 @@
   </head>
   <body>
 
-    <button type="button" class="btn btn-primary" data-id>Submit Edit</button>
-
-    <input type="submit" id="testvalue" name="button" value="button">
-
-    <div class="d-flex justify-content-between flex-wrap">
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalDefault">
-        Launch demo modal
-      </button>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdropLive">
-        Launch static backdrop modal
-      </button>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenteredScrollable">
-        Vertically centered scrollable modal
-      </button>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalFullscreen">
-        Full screen
-      </button>
-    </div>
-
-
-    <div class="modal fade" id="exampleModalDefault" tabindex="-1" aria-labelledby="exampleModalLabel" style="display: none;" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+  <form method="POST" enctype="multipart/form-data">
+      <div class="form-group">
+          <label for="formpartname">Edit Part Name</label>
+          <input type="text" name="part_name" class="form-control" id="formpartname" placeholder="Update part name (leave blank for no change)">
+      </div><br>
+      <div class="form-group">
+          <label for="formprice">Edit Part Price</label>
+          <input type="number" name="part_price" class="form-control" id="formprice" placeholder="Update price (leave blank for no change)">
+      </div><br>
+      <div class="form-group">
+          <label for="formtextarea">Edit Part Description</label>
+          <textarea class="form-control" name="part_description" id="formtextarea" rows="3" placeholder="Update description (leave blank for no change)"></textarea>
         </div>
+      <br>
+      <div class="form-group">
+          <label for="img">Add file</label><br>
+          <input type="file" class="form-control-file" id="img" name="img" accept="image/*" value="Upload">
       </div>
-    </div>
-    
-    
+      <br><button type="submit" class="submitbutton btn btn-primary">Submit Edit</button>
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+    </form>
 
-    <div class="modal fade" id="exampleModalCenteredScrollable" tabindex="-1" aria-labelledby="exampleModalCenteredLabel" style="display: none;" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalCenteredLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <img src="../static/images/{{filename}}" width="160" height="100">
+    {{filename}}
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -77,7 +44,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $(document).ready(function() {
             $('input').on('click', function() {
                 $.ajax({
@@ -91,7 +58,7 @@
                 });
             });
         });
-    </script>
+    </script> -->
    
   </body>
 </html>
